--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 以色列-3.08MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 50157, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-312.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: 5.183.176.84, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-182.5KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.07MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1005.9KB/s(Youtube:不良林), server: 194.156.231.251, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-2.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 以色列-3.08MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
