--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.15MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇯🇵 日本-312.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.18MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-463.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: 5.183.176.84, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1005.9KB/s(Youtube:不良林), server: 194.156.231.251, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-610.1KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
   - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-989.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 未知国家-1.02MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-989.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 未知国家-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
